[package]
name = "nexusq"
version = "0.1.0"
edition = "2021"
description="A multi producer multi consumer (MPMC) broadcasting channel"
readme = "README.md"
repository = "https://github.com/Lochlanna/nexusq"
homepage = "https://github.com/Lochlanna/nexusq"
license = "MIT"
keywords = ["mpmc", "async", "channel", "broadcast"]
categories = ["concurrency", "data-structures", "asynchronous"]
exclude = ["/.*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Defines a feature named `webp` that does not enable any other features.
no-std = []

[dependencies]
event-listener = "2.5.3"

[dev-dependencies]
criterion = { version = "0.4", features = ["async_tokio"]}
tokio = { version = "1", features = ["full"] }
multiqueue = "0.3.2"
multiqueue2 = "0.1.7"
workerpool = "1.2.0"
futures = "0.3.25"
console-subscriber = "0.1.8"

[profile.release]
lto=true
codegen-units=1
incremental=false

[profile.test]
opt-level = 0
debug = true
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false



[[bench]]
name = "bench"
harness = false

#[[bench]]
#name = "async_bench"
#harness = false
