[package]
name = "nexusq"
version = "0.1.0"
edition = "2021"
description="A multi producer multi consumer (MPMC) broadcasting channel"
readme = "README.md"
repository = "https://github.com/Lochlanna/nexusq"
homepage = "https://github.com/Lochlanna/nexusq"
license = "MIT"
keywords = ["mpmc", "async", "channel", "broadcast"]
categories = ["concurrency", "data-structures", "asynchronous"]
exclude = ["/.*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
event-listener = "2.5.3"
thiserror = "1.0.38"

[dev-dependencies]
criterion = { version = "0.4"}
# multiqueue2 = "0.1.7"
workerpool = "1.2.0"
pretty_assertions = "1.3.0"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false


# [[bench]]
# name = "throughput"
# harness = false

# [[bench]]
# name = "latency"
# harness = false

#[[bench]]
#name = "async_bench"
#harness = false
